src/main/resources/static/css/style.css
/* ... */
@media screen and (max-width: 992px) {
  #fh5co-featured .fh5co-grid > .fh5co-v-half > .fh5co-h-row-2.fh5co-reversed .fh5co-bg-img {
    position: relative;
    right: inherit;
    top: inherit;
    bottom: inherit;
  }
}

#fh5co-menus {
  padding: 2em 0;
  background-repeat: repeat;
    background-size: cover;
    background-position: center center;
}

@media screen and (max-width: 768px) {
  #fh5co-menus {
    padding: 2em 0;


  }
}

#fh5co-menus .fh5co-heading .heading {
  position: relative;
  padding-top: 30px !important;
}

#fh5co-menus .fh5co-price-menu {
  float: left;
  width: 100%;
  margin-bottom: 30px;
}

@media screen and (max-width: 768px) {
  #fh5co-menus .fh5co-price-menu {
    margin-bottom: 30px;
    float: left;
    width: 100%;
    clear: none !important;
  }
}

#fh5co-menus .fh5co-price-menu h2 {
  margin-bottom: 50px;
  font-style: italic;
  position: relative;
  font-size: 20px;
}

#fh5co-menus .fh5co-price-menu ul {
  padding: 0;
  margin: 0;
}

#fh5co-menus .fh5co-price-menu ul li {
  padding: 0 0 20px 0;
  margin: 0 0 20px 0;
  border-bottom: 1px dotted #ccc;
  display: block;
  float: left;
  width: 100%;
}

#fh5co-menus .fh5co-price-menu ul li .fh5co-price-desc {
  clear: both;
  float: left;
  width: 80%;
}


#fh5co-menus .fh5co-price-menu ul li .fh5co-price-desc > div {
  width: 75%;
  float: left;
  position: relative;
  font-size: 14px;
  line-height: 1.5;
}

#fh5co-menus .fh5co-price-menu ul li .fh5co-price-desc > div p {
  margin: 0;
  color: #fb6e14;
}

#fh5co-menus .fh5co-price-menu ul li .fh5co-price-desc > div h3 {
  margin: 0 0 10px 0;
  padding: 0;
  font-size: 15px;
  color: #5e493a;
}

#fh5co-menus .fh5co-price-menu ul li .fh5co-price-procedure {
  float: right;
  width: 20%;
  text-align: right;
  font-size: 20px;
  color: #fb6e14;
}

#fh5co-events {

  background-color: transparent;
  background-size: cover;
  background-attachment: fixed;
  position: relative;
}

#fh5co-events > .fh5co-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  z-index: 9;
}

#fh5co-events > .container {
  z-index: 10;
  position: relative;
}

#fh5co-events .fh5co-heading .heading {
  position: relative;
  padding-top: 30px !important;
  color: #fff;
}

#fh5co-events .fh5co-heading .heading:before, #fh5co-events .fh5co-heading .heading::before {
  height: 64px;
  width: 49px;
  position: absolute;
  content: "";
  top: 0;
  left: 50%;
  margin-top: -50px;
  margin-left: -24px;
}

#fh5co-events .fh5co-heading .sub-heading {
  color: #a99c92;
}

@media screen and (max-width: 768px) {
  #fh5co-events {
    padding: 2em 0;
  }
}

#fh5co-events .fh5co-event {
  padding: 50px;
  text-align: center;
  margin-bottom: 30px;
  position: relative;
}

#fh5co-events .fh5co-event:before {
  border: 2px solid #e6e6e6;
  content: "";
  position: absolute;
  top: 15px;
  bottom: 15px;
  right: 15px;
  left: 15px;
  z-index: 0;
}

#fh5co-events .fh5co-event h3, #fh5co-events .fh5co-event .fh5co-event-meta, #fh5co-events .fh5co-event p, #fh5co-events .fh5co-event .btn {
  position: relative;
  z-index: 2;
}

#fh5co-events .fh5co-event h3 {
  padding-bottom: 10px;
  color: white;
}

#fh5co-events .fh5co-event .fh5co-event-meta {
  margin-bottom: 20px;
  display: block;
  color: gray;
  position: relative;
  padding-bottom: 20px;
}

#fh5co-events .fh5co-event .fh5co-event-meta:after, #fh5co-events .fh5co-event .fh5co-event-meta::after {
  background: #bfbfbf;
  background: #fb6e14;
  content: "";
  position: absolute;
  left: 50%;
  bottom: 0;
  width: 40px;
  height: 2px;
  margin-left: -20px;
}

#fh5co-events .fh5co-event p {
  font-size: 16px;
  line-height: 1.8;
  color: #a99c92;
}

#fh5co-events .fh5co-event p:last-child {
  margin-bottom: 0;
}

#fh5co-events .fh5co-event .btn {
  margin-bottom: 0;
}

#fh5co-contact {
  padding: 2em 0;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

@media screen and (max-width: 768px) {
  #fh5co-contact {
   background-attachment: scroll;
   padding: 2em 0;
   background-size: cover;
   background-position: inherit;
  }
}

#fh5co-contact h3 {
  margin-bottom: 30px;
  font-style: italic;
}

#fh5co-contact .fh5co-heading .heading {
  position: relative;
  padding-top: 30px !important;
}

#fh5co-contact .fh5co-heading .heading:before, #fh5co-contact .fh5co-heading .heading::before {
  height: 61px;
  width: 61px;
  position: absolute;
  content: "";
  top: 0;
  left: 50%;
  margin-top: -50px;
  margin-left: -24px;
}

#fh5co-contact .fh5co-social {
  padding: 0;
  margin: 0;
}

#fh5co-contact .fh5co-social li {
  padding: 0;
  margin: 0;
}

#fh5co-contact .fh5co-contact-info {
  padding: 0;
  margin: 0 0 1.5em 0;
}

#fh5co-contact .fh5co-contact-info li {
  position: relative;
  padding: 0;
  margin: 0 0 1.5em 0;
  padding-left: 50px;
  list-style: none;
}

#fh5co-contact .fh5co-contact-info li i {
  position: absolute;
  top: .4em;
  left: 0;
}

#fh5co-container {
  position: relative;
  z-index: 10;
}

#fh5co-footer {
  width: 100%;
  background: rgba(0, 0, 0, 0.9);
  padding: 7em 0;
  z-index: 1;
  font-size: 16px;
  line-height: 1.5;
  color: rgba(255, 255, 255, 0.5);
}

@media screen and (max-width: 768px) {
  #fh5co-footer {
    padding: 2em 0;
  }
}

@media screen and (max-width: 480px) {
  #fh5co-footer {
    height: inherit;
    position: relative;
  }
}

.fh5co-social {
  padding: 0;
  margin: 0;
}

.fh5co-social li {
  padding: 0;
  margin: 0;
  list-style: none;
  display: inline;
}

.fh5co-social li a {
  font-size: 30px;
  padding: 10px;
}
.fh5co-social li a i {
  font-size: 30px;
}

.fh5co-social li a:hover, .fh5co-social li a:active, .fh5co-social li a:focus {
  outline: none;
  text-decoration: none;
}

#fh5co-offcanvas, #fh5co-container, .fh5co-nav-toggle, #fh5co-footer {
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
/* ... */

